--- a/pom.xml
+++ b/pom.xml
@@ -52,10 +52,15 @@
             <artifactId>spring-jdbc</artifactId>
             <version>5.0.2.RELEASE</version>
         </dependency>
+<!--         <dependency> -->
+<!--             <groupId>mysql</groupId> -->
+<!--             <artifactId>mysql-connector-java</artifactId> -->
+<!--             <version>5.1.44</version> -->
+<!--         </dependency> -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.44</version>
+            <version>8.0.20</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
