aggiunta workServlet, fix vari

--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,15 @@
 
     <!--  And now, a list of Maven projects that we depend upon -->
     <dependencies>
-        <dependency>
+     <dependency>
+            <groupId>javax.servlet</groupId>
+  			<artifactId>javax.servlet-api</artifactId>
+  			<version>3.1.0</version>
+       <!-- <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
-            <scope>provided</scope>
+            <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>jstl</groupId>
