--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 
 spring.datasource.url = jdbc:mysql://localhost:3306/DesignFabSpring?autoReconnect=true&useSSL=false
 spring.datasource.username = root
-spring.datasource.password = password
+spring.datasource.password = QweRTyuioP160@
 
 #server.servlet.context-path="http://localhost:8080"
 
