--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # DataSource settings: set here your own configurations for the database
 
-spring.datasource.url = jdbc:mysql://localhost:3306/sampledb?autoReconnect=true&useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/DesignFabSpringAngular?autoReconnect=true&useSSL=false
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = QweRTyuioP160@
 
 #server.servlet.context-path="http://localhost:8080"
 
